--- a/app/views/members/index.html.erb
+++ b/app/views/members/index.html.erb
@@ -334,7 +334,7 @@
           <th>Email</th>
           <th>Phone Number</th>
           <th>Position</th>
-          <th><%= link_to "Total Points", :sort => "totalPoints"%></th>
+          <th>Total Points</th>
         </tr>
       </thead>
       <tbody>
